--- a/Pipfile
+++ b/Pipfile
@@ -6,7 +6,7 @@ name = "pypi"
 [packages]
 ipdb = "==0.13.9"
 flask = "*"
-flask-sqlalchemy = "==3.0.3"
+flask-sqlalchemy = "*"
 werkzeug = "==2.2.2"
 flask-migrate = "*"
 sqlalchemy-serializer = "*"
@@ -18,6 +18,9 @@ bcrypt = "*"
 flask-bcrypt = "*"
 flask-jwt-extended = "*"
 cloudinary = "*"
+gunicorn = "*"
+honcho = "*
+psycopg2-binary = "*"
 
 [dev-packages]
 
